--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,38 @@
-asgiref==3.11.1
-Django==6.0.2
-djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
-PyJWT==2.11.0
-sqlparse==0.5.5
-tzdata==2025.3
-gunicorn==20.1.0
+asgiref==3.8.1
+certifi==2026.1.4
+cffi==1.17.1
+charset-normalizer==3.4.4
+contourpy==1.3.0
+cryptography==45.0.5
+cycler==0.12.1
+dj-database-url==3.1.0
+Django==5.0.7
+django-anymail==14.0
+django-cors-headers==4.7.0
+django-environ==0.12.0
+django-widget-tweaks==1.5.0
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+fonttools==4.54.1
+gunicorn==25.0.3
+idna==3.11
+kiwisolver==1.4.7
+matplotlib==3.9.2
+mysqlclient==2.2.4
+numpy==2.1.2
+packaging==24.1
+pillow==10.4.0
+psycopg2-binary==2.9.11
+pycparser==2.22
+PyJWT==2.9.0
+PyMySQL==1.1.1
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+requests==2.32.5
+setuptools==82.0.0
+six==1.16.0
+sqlparse==0.5.1
+tzdata==2024.1
+urllib3==2.6.3
+whitenoise==6.11.0
